--- a/actorgame/laya/pages/actorgame/QuestionPage.ui
+++ b/actorgame/laya/pages/actorgame/QuestionPage.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"Dialog",
-    "selectedBox":1,
-    "selecteID":5,
+    "selectedBox":8,
+    "selecteID":7,
     "props":{"width":599,"sceneColor":"#000000","height":543},
     "nodeParent":-1,
     "label":"Dialog",
@@ -41,7 +41,7 @@
                     "x":30,
                     "type":"UIView",
                     "source":"actorgame/QuestionSelectItem.ui",
-                    "props":{"name":"render"},
+                    "props":{"runtime":"view.actorgame.QuestionSelectItem","name":"render"},
                     "nodeParent":8,
                     "label":"UIView(render)",
                     "isDirectory":false,
