--- a/actorgame/laya/pages/actorgame/ReportItem.ui
+++ b/actorgame/laya/pages/actorgame/ReportItem.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":1,
-    "selecteID":7,
+    "selectedBox":9,
+    "selecteID":8,
     "props":{"width":539,"sceneWidth":539,"sceneHeight":80,"sceneColor":"#000000","height":80},
     "nodeParent":-1,
     "label":"View",
@@ -54,7 +54,7 @@
                     "x":30,
                     "type":"UIView",
                     "source":"actorgame/StarItem.ui",
-                    "props":{"name":"render"},
+                    "props":{"runtime":"view.actorgame.StarItem","name":"render"},
                     "nodeParent":9,
                     "label":"UIView(render)",
                     "isDirectory":false,
