--- a/actorgame/laya/pages/actorgame/GameMain.ui
+++ b/actorgame/laya/pages/actorgame/GameMain.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":1,
-    "selecteID":2,
+    "selectedBox":12,
+    "selecteID":6,
     "props":{"width":720,"sceneColor":"#000000","height":1280},
     "nodeParent":-1,
     "label":"View",
@@ -41,7 +41,7 @@
                     "x":30,
                     "type":"UIView",
                     "source":"actorgame/ActorItem.ui",
-                    "props":{"name":"render"},
+                    "props":{"runtime":"view.actorgame.ActorItem","name":"render"},
                     "nodeParent":12,
                     "label":"UIView(render)",
                     "isDirectory":false,
