--- a/actorgame/laya/pages/actorgame/ReportPage.ui
+++ b/actorgame/laya/pages/actorgame/ReportPage.ui
@@ -1,11 +1,11 @@
 {
     "x":0,
-    "type":"View",
+    "type":"Dialog",
     "selectedBox":1,
-    "selecteID":12,
+    "selecteID":11,
     "props":{"width":720,"sceneColor":"#000000","height":1280},
     "nodeParent":-1,
-    "label":"View",
+    "label":"Dialog",
     "isOpen":true,
     "isDirectory":true,
     "isAniNode":true,
@@ -54,7 +54,7 @@
                     "x":30,
                     "type":"UIView",
                     "source":"actorgame/ReportItem.ui",
-                    "props":{"name":"render"},
+                    "props":{"runtime":"view.actorgame.ReportItem","name":"render"},
                     "nodeParent":11,
                     "label":"UIView(render)",
                     "isDirectory":false,
@@ -68,7 +68,7 @@
         {
             "x":15,
             "type":"Button",
-            "props":{"y":1006,"x":234,"width":252,"var":"continueBtn","skin":"comp/button.png","labelSize":30,"labelColors":"#ffffff","label":"继续","height":97},
+            "props":{"y":1079,"x":234,"width":252,"var":"continueBtn","skin":"comp/button.png","labelSize":30,"labelColors":"#ffffff","label":"继续","height":97},
             "nodeParent":1,
             "label":"Button(continueBtn)",
             "isDirectory":false,
