--- a/actorgame/laya/pages/actorgame/QuestionPage.ui
+++ b/actorgame/laya/pages/actorgame/QuestionPage.ui
@@ -2,7 +2,7 @@
     "x":0,
     "type":"Dialog",
     "selectedBox":1,
-    "selecteID":9,
+    "selecteID":2,
     "props":{"width":599,"sceneColor":"#000000","height":543},
     "nodeParent":-1,
     "label":"Dialog",
@@ -28,7 +28,7 @@
         {
             "x":15,
             "type":"Label",
-            "props":{"y":20,"x":0,"width":599,"var":"questionTxt","text":"游戏市场数据不错，是否换皮刷钱","styleSkin":"comp/label.png","height":149,"fontSize":30,"color":"#ffffff","align":"center"},
+            "props":{"y":40,"x":49,"wordWrap":true,"width":500,"var":"questionTxt","text":"游戏市场数据不错，是否换皮刷钱","styleSkin":"comp/label.png","height":144,"fontSize":30,"color":"#ffffff","align":"center"},
             "nodeParent":1,
             "label":"Label(questionTxt)",
             "isDirectory":false,
@@ -41,7 +41,7 @@
         {
             "x":15,
             "type":"List",
-            "props":{"y":254,"x":164,"width":275,"var":"selectList","spaceY":20,"height":248},
+            "props":{"y":254,"x":80,"width":437,"var":"selectList","spaceY":20,"repeatX":1,"height":248},
             "nodeParent":1,
             "label":"List(selectList)",
             "isOpen":true,
@@ -54,7 +54,7 @@
                     "x":30,
                     "type":"UIView",
                     "source":"actorgame/QuestionSelectItem.ui",
-                    "props":{"runtime":"view.actorgame.QuestionSelectItem","name":"render"},
+                    "props":{"runtime":"view.actorgame.QuestionSelectItem","right":0,"name":"render","left":0},
                     "nodeParent":8,
                     "label":"UIView(render)",
                     "isDirectory":false,
