--- a/actorgame/laya/pages/actorgame/QuestionSelectItem.ui
+++ b/actorgame/laya/pages/actorgame/QuestionSelectItem.ui
@@ -15,7 +15,7 @@
         {
             "x":15,
             "type":"Button",
-            "props":{"width":275,"var":"actionBtn","skin":"comp/button.png","labelSize":30,"labelColors":"#ffffff","label":"选项1","height":67},
+            "props":{"var":"actionBtn","skin":"comp/button.png","right":0,"left":0,"labelSize":30,"labelColors":"#ffffff","label":"选项1","height":67},
             "nodeParent":1,
             "label":"Button(actionBtn)",
             "isDirectory":false,
