--- a/actorgame/laya/pages/actorgame/ReportItem.ui
+++ b/actorgame/laya/pages/actorgame/ReportItem.ui
@@ -2,7 +2,7 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":11,
+    "selecteID":10,
     "props":{"width":539,"sceneWidth":539,"sceneHeight":80,"sceneColor":"#000000","height":80},
     "nodeParent":-1,
     "label":"View",
@@ -68,7 +68,7 @@
         {
             "x":15,
             "type":"Label",
-            "props":{"y":53,"x":1,"width":79,"var":"nameTxt","text":"名字","styleSkin":"comp/label.png","height":28,"fontSize":22,"color":"#ffffff","align":"center"},
+            "props":{"y":53,"x":1,"width":79,"var":"nameTxt","text":"名字","styleSkin":"comp/label.png","strokeColor":"#100f0f","stroke":3,"height":28,"fontSize":22,"color":"#ffffff","align":"center"},
             "nodeParent":1,
             "label":"Label(nameTxt)",
             "isDirectory":false,
