--- a/debugtoolplatform/deskplugins/RelationMapEditor/laya/pages/relationmap/RelationMapEditor.ui
+++ b/debugtoolplatform/deskplugins/RelationMapEditor/laya/pages/relationmap/RelationMapEditor.ui
@@ -2,7 +2,7 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":2,
+    "selecteID":26,
     "props":{"width":600,"sceneColor":"#000000","height":600},
     "nodeParent":-1,
     "label":"View",
@@ -28,9 +28,9 @@
         {
             "x":15,
             "type":"Tab",
-            "props":{"y":10,"x":15,"width":242,"skin":"comp/tab.png","labels":"操作,节点,线","labelColors":"#ffffff","height":24},
+            "props":{"y":10,"x":15,"width":242,"var":"optionTab","skin":"comp/tab.png","labels":"操作,节点,线","labelColors":"#ffffff","height":24},
             "nodeParent":1,
-            "label":"Tab",
+            "label":"Tab(optionTab)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
@@ -41,9 +41,9 @@
         {
             "x":15,
             "type":"Image",
-            "props":{"width":600,"top":50,"skin":"comp/blank2.png","right":0,"left":0,"height":540,"bottom":0},
+            "props":{"width":600,"var":"container","top":50,"skin":"comp/blank2.png","sizeGrid":"7,13,9,9","right":0,"left":0,"height":540,"bottom":0},
             "nodeParent":1,
-            "label":"Image",
+            "label":"Image(container)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
