--- a/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/ItemData.ui
+++ b/debugtoolplatform/deskplugins/AnswerFlow/laya/pages/answerflow/ItemData.ui
@@ -2,7 +2,7 @@
     "x":0,
     "type":"MindMapTreeBase",
     "selectedBox":1,
-    "selecteID":4,
+    "selecteID":2,
     "props":{"width":200,"sceneColor":"#000000","height":30},
     "nodeParent":-1,
     "label":"MindMapTreeBase",
@@ -15,7 +15,7 @@
         {
             "x":15,
             "type":"TextInput",
-            "props":{"y":4,"x":5,"width":95,"var":"item","text":"物品","skin":"comp/input_22.png","promptColor":"#f31713","height":22,"color":"#e80d09"},
+            "props":{"y":4,"x":5,"width":95,"var":"item","text":"物品","skin":"comp/input_22.png","runtime":"commoncomponent.InputSelect","promptColor":"#f31713","height":22,"color":"#e80d09"},
             "nodeParent":1,
             "label":"TextInput(item)",
             "isDirectory":false,
