--- a/nlp/WordParser/laya/pages/wordparser/WordViewer.ui
+++ b/nlp/WordParser/laya/pages/wordparser/WordViewer.ui
@@ -3,7 +3,7 @@
     "type":"View",
     "selectedBox":1,
     "selecteID":2,
-    "props":{"width":85,"sceneWidth":85,"sceneHeight":29,"sceneColor":"#000000","height":29},
+    "props":{"width":85,"sceneColor":"#000000","height":60},
     "nodeParent":-1,
     "label":"View",
     "isOpen":true,
@@ -15,13 +15,26 @@
         {
             "x":15,
             "type":"Label",
-            "props":{"y":0,"x":0,"width":85,"var":"txt","text":"文字","runtime":"commoncomponent.AutoSizeLabel","height":29,"fontSize":20,"color":"#f4e4e4"},
+            "props":{"y":30,"x":0,"width":85,"var":"txt","text":"文字","runtime":"commoncomponent.AutoSizeLabel","height":29,"fontSize":20,"color":"#0dcd62"},
             "nodeParent":1,
             "label":"Label(txt)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
             "compId":2,
+            "child":[
+                ]
+        },
+        {
+            "x":15,
+            "type":"Label",
+            "props":{"y":0,"x":0,"width":85,"var":"typeTxt","text":"文字","runtime":"commoncomponent.AutoSizeLabel","height":29,"fontSize":20,"color":"#eac654"},
+            "nodeParent":1,
+            "label":"Label(typeTxt)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":3,
             "child":[
                 ]
         }],
