--- a/debugtoolplatform/NLPPlatform/laya/pages/nlpplatform/PlatformMain.ui
+++ b/debugtoolplatform/NLPPlatform/laya/pages/nlpplatform/PlatformMain.ui
@@ -2,7 +2,7 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":5,
+    "selecteID":3,
     "props":{"width":600,"sceneColor":"#000000","height":400},
     "nodeParent":-1,
     "label":"View",
@@ -55,7 +55,7 @@
         {
             "x":15,
             "type":"Label",
-            "props":{"y":12,"x":205,"width":383,"var":"bookInfo","text":"label","styleSkin":"comp/label.png","height":26,"fontSize":20,"color":"#ffffff"},
+            "props":{"y":12,"x":205,"width":383,"var":"bookInfo","text":"文件名","styleSkin":"comp/label.png","height":26,"fontSize":20,"color":"#ffffff"},
             "nodeParent":1,
             "label":"Label(bookInfo)",
             "isDirectory":false,
