--- a/debugtoolplatform/NLPPlatform/laya/pages/nlpplatform/BookReader.ui
+++ b/debugtoolplatform/NLPPlatform/laya/pages/nlpplatform/BookReader.ui
@@ -29,7 +29,7 @@
         {
             "x":15,
             "type":"Label",
-            "props":{"y":16,"x":16,"width":120,"var":"bookInfo","text":"书籍信息","styleSkin":"comp/label.png","height":53,"fontSize":20,"color":"#ffffff"},
+            "props":{"y":16,"x":16,"width":136,"var":"bookInfo","text":"书籍信息","styleSkin":"comp/label.png","height":53,"fontSize":20,"color":"#ffffff"},
             "nodeParent":1,
             "label":"Label(bookInfo)",
             "isDirectory":false,
@@ -42,7 +42,7 @@
         {
             "x":15,
             "type":"Box",
-            "props":{"y":93,"x":16,"width":128,"var":"buttonBox","height":287},
+            "props":{"y":99,"x":16,"width":128,"var":"buttonBox","height":287},
             "nodeParent":1,
             "label":"Box(buttonBox)",
             "isOpen":true,
@@ -142,6 +142,32 @@
                     "child":[
                         ]
                 }]
+        },
+        {
+            "x":15,
+            "type":"TextInput",
+            "props":{"y":69,"x":16,"width":69,"var":"pageNum","text":"0","skin":"comp/input_22.png","height":22,"color":"#ffffff"},
+            "nodeParent":1,
+            "label":"TextInput(pageNum)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":14,
+            "child":[
+                ]
+        },
+        {
+            "x":15,
+            "type":"Button",
+            "props":{"y":67,"x":94,"width":34,"var":"go","skin":"comp/button.png","label":"go","height":24},
+            "nodeParent":1,
+            "label":"Button(go)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":15,
+            "child":[
+                ]
         }],
     "animations":[
         {
