--- a/debugtoolplatform/NLPPlatform/laya/pages/nlpplatform/BookReader.ui
+++ b/debugtoolplatform/NLPPlatform/laya/pages/nlpplatform/BookReader.ui
@@ -1,9 +1,9 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":9,
-    "selecteID":17,
-    "props":{"width":600,"sceneColor":"#000000","runtime":"view.nlpplatform.BookReader","height":400},
+    "selectedBox":1,
+    "selecteID":9,
+    "props":{"width":600,"sceneColor":"#000000","runtime":"view.nlpplatform.BookReader","height":800},
     "nodeParent":-1,
     "label":"View",
     "isOpen":true,
@@ -42,7 +42,7 @@
         {
             "x":15,
             "type":"Box",
-            "props":{"y":99,"x":16,"width":128,"var":"buttonBox","height":287},
+            "props":{"x":16,"width":128,"var":"buttonBox","top":100,"bottom":40},
             "nodeParent":1,
             "label":"Box(buttonBox)",
             "isOpen":true,
@@ -165,6 +165,19 @@
                     "isAniNode":true,
                     "hasChild":false,
                     "compId":17,
+                    "child":[
+                        ]
+                },
+                {
+                    "x":30,
+                    "type":"Button",
+                    "props":{"y":304,"x":0,"skin":"comp/button.png","name":"广播标注","label":"广播标注"},
+                    "nodeParent":9,
+                    "label":"Button(广播标注)",
+                    "isDirectory":false,
+                    "isAniNode":true,
+                    "hasChild":false,
+                    "compId":18,
                     "child":[
                         ]
                 }]
