--- a/debugtoolplatform/NLPPlatform/laya/pages/nlpplatform/BookReader.ui
+++ b/debugtoolplatform/NLPPlatform/laya/pages/nlpplatform/BookReader.ui
@@ -41,10 +41,10 @@
         },
         {
             "x":15,
-            "type":"Box",
-            "props":{"x":16,"width":128,"var":"buttonBox","top":100,"bottom":40},
+            "type":"Panel",
+            "props":{"x":16,"width":128,"var":"buttonBox","vScrollBarSkin":"comp/vscroll.png","top":100,"bottom":40},
             "nodeParent":1,
-            "label":"Box(buttonBox)",
+            "label":"Panel(buttonBox)",
             "isOpen":true,
             "isDirectory":true,
             "isAniNode":true,
