--- a/debugtoolplatform/NLPPlatform/laya/pages/nlpplatform/WordListViewer.ui
+++ b/debugtoolplatform/NLPPlatform/laya/pages/nlpplatform/WordListViewer.ui
@@ -2,7 +2,7 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":3,
+    "selecteID":2,
     "props":{"width":600,"sceneColor":"#000000","height":400},
     "nodeParent":-1,
     "label":"View",
@@ -14,10 +14,10 @@
     "child":[
         {
             "x":15,
-            "type":"Box",
-            "props":{"var":"container","top":5,"right":5,"left":5,"bottom":5},
+            "type":"Panel",
+            "props":{"var":"container","vScrollBarSkin":"comp/vscroll.png","top":5,"right":5,"left":5,"bottom":5},
             "nodeParent":1,
-            "label":"Box(container)",
+            "label":"Panel(container)",
             "isDirectory":false,
             "isAniNode":true,
             "hasChild":false,
